--- a/linux/Config.in
+++ b/linux/Config.in
@@ -60,6 +60,7 @@ config BR2_LINUX_KERNEL_LATEST_CIP_RT_VERSION
 
 	  https://www.cip-project.org
 
+
 config BR2_LINUX_KERNEL_CUSTOM_VERSION
 	bool "Custom version"
 	help
@@ -88,6 +89,7 @@ config BR2_LINUX_KERNEL_CUSTOM_GIT
 	  This option allows Buildroot to get the Linux kernel source
 	  code from a Git repository.
 
+
 config BR2_LINUX_KERNEL_CUSTOM_HG
 	bool "Custom Mercurial repository"
 	help
@@ -99,6 +101,13 @@ config BR2_LINUX_KERNEL_CUSTOM_SVN
 	help
 	  This option allows Buildroot to get the Linux kernel source
 	  code from a Subversion repository.
+
+
+config BR2_LINUX_KERNEL_CUSTOM_LOCAL
+	bool "Local directory"
+	help
+	  This option allows Buildroot to get the Linux kernel source
+	  code from a local directory.
 
 endchoice
 
@@ -123,6 +132,12 @@ config BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION
 
 endif
 
+config BR2_LINUX_KERNEL_CUSTOM_LOCAL_PATH
+	string "Path to the local directory"
+	depends on BR2_LINUX_KERNEL_CUSTOM_LOCAL
+	help
+	  Path to the local directory with the Linux kernel source code.
+
 config BR2_LINUX_KERNEL_VERSION
 	string
 	default "5.10.19" if BR2_LINUX_KERNEL_LATEST_VERSION
@@ -133,6 +148,9 @@ config BR2_LINUX_KERNEL_VERSION
 	default "custom" if BR2_LINUX_KERNEL_CUSTOM_TARBALL
 	default BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION \
 		if BR2_LINUX_KERNEL_CUSTOM_GIT || BR2_LINUX_KERNEL_CUSTOM_HG || BR2_LINUX_KERNEL_CUSTOM_SVN
+	
+	default "local" if BR2_LINUX_KERNEL_CUSTOM_LOCAL
+
 
 #
 # Patch selection
