add linux kernel as buildroot submodule

--- a/linux/Config.in
+++ b/linux/Config.in
@@ -100,6 +100,12 @@ config BR2_LINUX_KERNEL_CUSTOM_SVN
 	  This option allows Buildroot to get the Linux kernel source
 	  code from a Subversion repository.
 
+config BR2_LINUX_KERNEL_CUSTOM_LOCAL
+	bool "Local directory"
+	help
+	  This option allows Buildroot to get the Linux kernel source
+	  code from a local directory.
+
 endchoice
 
 config BR2_LINUX_KERNEL_CUSTOM_VERSION_VALUE
@@ -133,6 +139,7 @@ config BR2_LINUX_KERNEL_VERSION
 	default "custom" if BR2_LINUX_KERNEL_CUSTOM_TARBALL
 	default BR2_LINUX_KERNEL_CUSTOM_REPO_VERSION \
 		if BR2_LINUX_KERNEL_CUSTOM_GIT || BR2_LINUX_KERNEL_CUSTOM_HG || BR2_LINUX_KERNEL_CUSTOM_SVN
+	default "local" if BR2_LINUX_KERNEL_CUSTOM_LOCAL
 
 #
 # Patch selection
@@ -201,6 +208,12 @@ config BR2_LINUX_KERNEL_CUSTOM_LOGO_PATH
 	  Custom logo should be in PNG or JPEG format, it will be
 	  converted to the linux kernel format (224 colors only)
 	  and copied over the original logo file.
+
+config BR2_LINUX_KERNEL_CUSTOM_LOCAL_PATH
+	string "Path to the local directory"
+	depends on BR2_LINUX_KERNEL_CUSTOM_LOCAL
+	help
+	  Path to the local directory with the Linux kernel source code.
 
 #
 # Binary format
