--- a/board/metagross/linux.config
+++ b/board/metagross/linux.config
@@ -227,7 +227,8 @@ CONFIG_LIBERTAS_DEBUG=y
 CONFIG_MWIFIEX=m
 CONFIG_MWIFIEX_SDIO=m
 CONFIG_MWIFIEX_USB=m
-CONFIG_RTL8192CU=y
+CONFIG_RTL8192CU=m
+CONFIG_RTL8XXXU=y
 CONFIG_WL12XX=m
 CONFIG_WL18XX=m
 CONFIG_WLCORE_SPI=m
